[package]
name = "libuio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "0.38.34", features = ["net", "fs", "event"] }
libc = "0.2.153"
bincode = "1.3.3"
serde = { version = "1.0.198", features = ["derive"] }
