[package]
name = "uio-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
libc = "0.2.153"
libuio = { version = "0.1.0", path = "../libuio" }
rustix = { version = "0.38.34", features = ["net", "fs", "event"] }
